Images added using session

--- a/templates/movies/index.html.twig
+++ b/templates/movies/index.html.twig
@@ -3,5 +3,7 @@
 {% block title %}Hello MoviesController!{% endblock %}
 
 {% block body %}
-    <h1>Helolo World</h1
+    <h1>Helolo World</h1>
+    <img src="{{ asset('images/one.jpg')}}" />
+    <img src="images/one.jpg" />
 {% endblock %}
