--- a/templates/movies/index.html.twig
+++ b/templates/movies/index.html.twig
@@ -1,9 +1,37 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MoviesController!{% endblock %}
+{% block title %}Movie List{% endblock %}
 
 {% block body %}
-    <h1>Helolo World</h1>
-    <img src="{{ asset('images/one.jpg')}}" />
-    <img src="images/one.jpg" />
+	<div class="row">
+		<div class="jumbotron text-center">
+			<h1>Movie List</h1>
+			<p>World Best Movie Review Website</p> 
+		</div>
+		<div class="container">
+			<h2>Movie List</h2>
+			<table class="table">
+			  <thead>
+				<tr>
+				  <th>Movie Name </th>
+				  <th>Description</th>
+				  <th>Release Year</th>
+				  <th>Image</th>
+				</tr>
+			  </thead>
+			  <tbody>
+				{% for movie in movies %}
+					<tr>
+					  <td>{{ movie.title }}</td>
+					  <td>{{ movie.description }}</td>
+					  <td>{{ movie.releaseYear }}</td>
+					  <td>
+						<img src="{{ movie.imagePath }}" width="100" height="100" />
+					  </td>
+					</tr>
+				{% endfor %}
+			  </tbody>
+			</table>
+		</div>
+	</div>
 {% endblock %}
