--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,11 +21,11 @@
         <nav class="navbar navbar-default">
             <div class="container-fluid">
               <div class="navbar-header">
-                <a class="navbar-brand" href="#">Movie Store</a>
+                <a class="navbar-brand" href="/">Movie Store</a>
               </div>
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Movies</a></li>
+                <li class="active"><a href="{{path('movie_list')}}">Home</a></li>
+                <li><a href="{{ path('movie_list') }}">Movies</a></li>
                 <li><a href="#">Actors</a></li>
                 <li><a href="#">About US</a></li>
               </ul>
