--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
               <ul class="nav navbar-nav">
                 <li class="active"><a href="{{path('movie_list')}}">Home</a></li>
                 <li><a href="{{ path('movie_list') }}">Movies</a></li>
-                <li><a href="#">Actors</a></li>
+                <li><a href="{{ path('actor_list') }}">Actors</a></li>
                 <li><a href="#">About US</a></li>
               </ul>
             </div>
