--- a/templates/movies/index.html.twig
+++ b/templates/movies/index.html.twig
@@ -6,7 +6,8 @@
 <div class="row">
 	<div class="jumbotron text-center">
 		<h1>Movie List</h1>
-		<p>World Best Movie Review Website</p> 
+		<p>World Best Movie Review Website</p>
+		<a href="{{ path('movie_create') }}" class="btn btn-primary">Create new Movie</a>
 	</div>
 	<div class="container">
 		<h2>Movie List</h2>
