--- a/templates/movies/show.html.twig
+++ b/templates/movies/show.html.twig
@@ -22,6 +22,10 @@
 				</div>
 			</div>
 			<img src="{{ movie.imagePath }}" class="img-fluid" alt="Responsive image">
+			<br />
+			<a href="{{ path('movie_edit', {id: movie.id }) }}"> 
+					<h1> Edit Movie</h1>
+			<a/>
 			<hr>
 			<br />
 			<h1> Actor List</h1>
