Upload Image - Movie Create

--- a/templates/movies/create.html.twig
+++ b/templates/movies/create.html.twig
@@ -10,7 +10,7 @@
 			<a href="{{ path('movie_list') }}" class="btn btn-primary">Movie List</a>
 		</div>
 		<div class="container">
-			<form action="{{ path('movie_store') }}" method="post">
+			<form action="{{ path('movie_store') }}" method="post" enctype="multipart/form-data">
 				<div class="form-group">
 					<label for="title">Movie Title</label>
 					<input type="text" class="form-control" name="title" id="title" placeholder="Create New Title" >
@@ -18,6 +18,10 @@
 				<div class="form-group">
 					<label for="title">Relase Date</label>
 					<input type="date" class="form-control" name="release_year"  >
+				</div>
+				<div class="form-group">
+					<label for="image">Upload Image</label>
+					<input type="file" class="form-control" name="image_path"  >
 				</div>
 				<div class="form-group">
 					<label for="title">Movie Description</label>
