--- a/templates/movies/show.html.twig
+++ b/templates/movies/show.html.twig
@@ -31,7 +31,7 @@
 			<h1> Actor List</h1>
 			<ul class="list-group">
 				{% for actor in movie.actors %}
-					<li class="list-group-item"><strong>Actor Name:</strong> {{actor.name}}</li>
+					<li class="list-group-item"><strong>Actor Name:</strong><a href="{{ path('actor_show', {'id': actor.id}) }}"> {{actor.name}}</a></li>
 				{% endfor %}
 			</ul>
 		</div>
