--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,9 +27,21 @@
                 <li class="active"><a href="{{path('movie_list')}}">Home</a></li>
                 <li><a href="{{ path('movie_list') }}">Movies</a></li>
                 <li><a href="{{ path('actor_list') }}">Actors</a></li>
+                <li><a href="#">About US</a></li>
+
+                {% 
+                    if app.user == null 
+                %}
                 <li><a href="{{ path('app_register') }}">Register</a></li>
                 <li><a href="{{ path('app_login') }}">Login</a></li>
-                <li><a href="#">About US</a></li>
+                {% endif %}
+
+                {% 
+                    if app.user != null
+                %}
+                <li><a href="{{ path('app_logout') }}">Logout</a></li>
+                {% endif %}
+
               </ul>
             </div>
           </nav>
